# RFECS

./: README.md  RFECS.cabal  stack.yaml
RFECS_core/: OOBVarImp.m  README  find_peak_prob.m  forest_predict.m  forest_predict_par.m  forest_training_part1.m  forest_training_part1_parallel.m  peak_call.m
RFECS_core/@multiclasstree/: catsplit.m  classcount.m  cutcategories.m  dfgetdistributions.m  dfswitchyard.m  disp.m  eval.m  mgrp2idx.m  multiclasstree.m  prune.m  risk.m  test.m  test_multi.m  treeval_new.m  view.m
examples/: input.yaml
src/: Main.hs
src/RFECS/: Constants.hs  Type.hs  Utils.hs
